Fix padding expansion. Thanks to stackoverflow.
http://stackoverflow.com/questions/8294101/how-do-you-prevent-expanding-outer-element-when-adding-padding/8294272#8294272

--- a/src/freepass.css
+++ b/src/freepass.css
@@ -35,11 +35,7 @@ p {
   width: 100%;
 
   font-size: 1.5em;
-  height: 9.25em;
-  margin-bottom: 4em;
-
-  -webkit-perspective: 600;
-  -moz-perspective: 600;
+  height: 10.75em;
 }
 
 #freepass > div {
@@ -57,6 +53,11 @@ p {
 
   text-shadow: 1px  1px 1px rgba(0,0,0,0.6);
   border-radius: 0.5em;
+
+  /* Avoid box expansion by padding */
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 #freepass .front > div {
